--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,14 @@
-version : '3.1'
+services:
+  backend:
+    image: stoma-api:latest
+    ports:
+      - "8000:8000"
 
-
-services: 
   frontend:
-    build:
-      context: "./frontend"
-      dockerfile: Dockerfile
-
-      ports: 
-        - "8050:8050"
+    image: stoma-frontend:latest
+    ports:
+      - "8501:8501"
+    environment:
+      API_URL: http://backend:8000/predict
+    depends_on:
+      - backend
